--- a/res/seaborg.css
+++ b/res/seaborg.css
@@ -6,6 +6,7 @@
 }
 
 .cell-marker {
+	background-image: none;
 	padding-left: 0px;
 	padding-right: 0px;
 	padding-top: 0px;
@@ -34,12 +35,14 @@
 /* background of depicted plots */
 .plot-frame {
 	background-color: transparent;
+	background-image: none;
 
 }
 
 .transparent-widget {
 	background-color: transparent;
 	border-color: transparent;
+	background-image: none;
 }
 
 /* buttons on plot for zooming */
@@ -74,6 +77,7 @@
 .add-button {
 	color: transparent;
 	background-color: transparent;
+	background-image: none;
 	border-color: transparent;
 	border-width: 0px;
 	border-image: none;
