--- a/res/seaborg.css
+++ b/res/seaborg.css
@@ -49,7 +49,8 @@
 	background-color: transparent;
 	background-image: none;
 	border-color: transparent;
-
+	border-width: 0px;
+	box-shadow: none;
 }
 
 .popmenu-button:hover {
