give marker a distinct color when evaluation is running

--- a/res/seaborg.css
+++ b/res/seaborg.css
@@ -24,7 +24,7 @@
 
 /* computation running */
 .cell-marker:disabled {
-	background-color: @theme_selected_bg_color;
+	background-color: @warning_color;
 }
 
 /* marker selected */
